++++++++++++++++++++++++
OFSwitch13 release notes
++++++++++++++++++++++++

This file contains OFSwitch13 release notes (most recent releases first).

Release 5.X.X (XXX XX, XXXX)
============================

- OFSwitch13PriorityQueue::QueueFactory with default DropTailQueue<Packet>
  configuration.

- This version is compatible with ns-3 versions 3.38 to 3.40 (including
  patches). There is no backward compatibility with older ns-3 versions.

- Compilation was tested in Ubuntu 22.04.1 LTS.


Release 5.2.2 (Sep 01, 2023)
============================

- Removing examples/ofswitch13-qos-controller dependency from netanim module.

- Updating buffer timeout operation with millisecond resolution.

- Updating the maximum size of the parent OFSwitch13Queue class with the sum of
  maximum size of internal queues. The operation mode (packets or bytes) of all
  internal queues must be the same.

- This version is compatible with ns-3 versions 3.38 and 3.39 (including
  patches). There is no backward compatibility with older ns-3 versions.

- Compilation was tested in Ubuntu 22.04.1 LTS.


Release 5.2.1 (Mar 31, 2023)
============================

- Replacing V4PingHelper by PingHelper in examples for ns-3.38 compatibility.

- This version is compatible with ns-3 version 3.38 (including patches). There
  is no backward compatibility with older ns-3 versions.

- Compilation was tested in Ubuntu 22.04.1 LTS.


Release 5.2.0 (Mar 31, 2023)
============================

- Updating CMakeLists.txt to automatically download and build the BOFUSS
  library.

- Updating the module documentation to reflect the changes in library building.

- Replacing the outdated ofsoftswitch13 library name by BOFUSS in the project
  (source code and documentation).

- Refactoring the BOFUSS ns3lib branch to simplify library compilation.

- This version is compatible with ns-3 versions 3.36 and 3.37 (including
  patches). There is no backward compatibility with older ns-3 versions.
